fixed alignment and and responsiveness

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -94,7 +94,7 @@ select {
   grid-template-areas: "select";
   align-items: center;
   width: 100%;
-  min-width: 15ch;
+  min-width: 20ch;
   max-width: 30ch;
   border: 1px solid var(--select-border);
   border-radius: 0.25em;
@@ -123,12 +123,6 @@ select,
   grid-area: select;
 }
 
-select:focus + .focus {
-  position: absolute;
-  top: -1px;
-  left: -1px;
-  right: -1px;
-  bottom: -1px;
-  border: 2px solid var(--select-focus);
-  border-radius: inherit;
+.select > select:focus {
+  border: 1.5px solid var(--select-focus);
 }
